k8s/backend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
  labels:
    app: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend-pod
          image: sairathod/todoapp-backend:v17
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-ser
spec:
  selector:
    app: todo-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
