k8s/frontend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-dep
  labels:
    app: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: sairathod/todoapp-frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-ser
spec:
  selector:
    app: todo-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
